# bioimread

./: .gitignore  CMakeLists.txt  README.md  deploy.ps1  fileinfoviewer.cpp  fileinfoviewer.hpp  image2dviewer.cpp  image2dviewer.hpp  image5dviewer.cpp  image5dviewer.hpp  image5dviewer.ui  main.cpp  viewer.cpp  viewer.hpp  viewer.ui
bfwrapper/: CMakeLists.txt  bfwrapper.java  jvmwrapper.cpp  jvmwrapper.hpp  main.cpp  reader.cpp  reader.hpp  showinfo.cpp  stopwatch.hpp
qpwrapper/: CMakeLists.txt  deepzoom.cpp  deepzoom.hpp  deepzoom_test.cpp  main.cpp  qpwrapper.java  reader.cpp  reader.hpp  reader_test.cpp  tilesviewer.cpp
qpwrapper/tiles_viewer/: demo.html  openseadragon.min.js
series_reader/: CMakeLists.txt  README.md  main.cpp  series_reader.cpp  series_reader.hpp
utils/: gray16.cpp  gray16.hpp  plane2qimg.cpp  plane2qimg.hpp
volume_viewer/: CMakeLists.txt  main.cpp
